examples/test/testpolicy7134.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7134
  namespace: namespace127
spec:
  podSelector:
    matchLabels:
      key15: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value2
          key16: value8
          key3: value16
      podSelector:
        matchLabels:
          key27: value11
          key41: value27
          key9: value32
